# rtmaps_cmake

./: .gitignore  CMakeLists.txt  FindRTMaps.cmake  README.md  build_studio2010win32_rtmaps4.bat  build_x64_vc10.bat  build_x86_vc10.bat
app_rtmaps/: CMakeLists.txt  rtmaps_test.cpp
src/: CMakeLists.txt  FindRTMaps.cmake  my_module.cpp  my_module_with_my_lib.cpp  rtmaps_cmake.cpp  rtmaps_cmake.hpp
src/my_lib/: my_lib.cpp  my_lib.hpp
